force-app/main/default/objects/Collection_Custom_Setting__c/fields/Account_Management_Org_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Org_Email_ID__c</fullName>
    <description>Organization-Wide Email Address used to send the Collection emails</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Organization-Wide Email Address used to send the Collection emails</inlineHelpText>
    <label>Account Management Org Email ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>