force-app/main/default/objects/Collection_Custom_Setting__c/fields/Auto_Print_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Auto_Print_Email_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto_Print Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>