force-app/main/default/objects/Collection_Custom_Setting__c/fields/Collection_Notes_ID_Initial__c.field-meta.xml
<CustomField>
    <fullName>Collection_Notes_ID_Initial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Notes ID Initial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>