force-app/main/default/objects/Collection_Custom_Setting__c/fields/Collection_Product_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Collection_Product_Field_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Product Field ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>