force-app/main/default/objects/Collection_Custom_Setting__c/fields/Contact_Counter_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Counter_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Counter Code</label>
    <type>TextArea</type>
</CustomField>