force-app/main/default/objects/Collection_Custom_Setting__c/fields/Credit_Card_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Email_Templates__c</fullName>
    <description>Credit Card Email Templates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Credit Card Email Templates</inlineHelpText>
    <label>Credit Card Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>