force-app/main/default/objects/Collection_Custom_Setting__c/fields/Distressed_Account_Manage_Org_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Account_Manage_Org_Email_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distressed Account Manage Org Email ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>