force-app/main/default/objects/Collection_Custom_Setting__c/fields/Distressed_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Email_Templates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distressed Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>