force-app/main/default/objects/Collection_Custom_Setting__c/fields/Last_n_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_n_Days__c</fullName>
    <label>Last n Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>