force-app/main/default/objects/Collection_Custom_Setting__c/fields/PTP_Product_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>PTP_Product_Field_ID__c</fullName>
    <description>To store Product field from PTP Information object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PTP Product Field ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>