force-app/main/default/objects/Collection_Custom_Setting__c/fields/Resticted_Credit_Card_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Resticted_Credit_Card_Email_Templates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resticted Credit Card Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>