force-app/main/default/objects/Collection_Custom_Setting__c/fields/Run_Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Task_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Task Trigger</label>
    <type>Checkbox</type>
</CustomField>