force-app/main/default/objects/Collection_Custom_Setting__c/fields/SMS_Opt_In_Keyword__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In_Keyword__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Opt In Keyword</label>
    <length>40</length>
    <type>Text</type>
</CustomField>