force-app/main/default/objects/Collection_Custom_Setting__c/fields/Term_Loan_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Email_Templates__c</fullName>
    <description>Term Loan Email Templates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Term Loan Email Templates</inlineHelpText>
    <label>Term Loan Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>