force-app/main/default/objects/Collection_Custom_Setting__c/fields/Workflow_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Workflow_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Decide Workflows should run or not</description>
    <inlineHelpText>To Decide Workflows should run or not</inlineHelpText>
    <label>Workflow In Progress</label>
    <type>Checkbox</type>
</CustomField>